-
Bug
-
Resolution: Done
-
P1: Critical
-
5.8.0 Alpha
-
None
As of Qt 5.8 it is no longer true that qtHaveModule(quick) == OpenGL support available. It is now possible to build the QtQuick module without OpenGL support, and so modules that require OpenGL need to be clear that they need QtQuick and OpenGL now.
It may be desirable that QtCharts also work with QtQuick backends other than OpenGL (like the Software ore D3D12), in which case usage of SceneGraph nodes that require OpenGL should be limited to backends that support OpenGL.
| For Gerrit Dashboard: QTBUG-55193 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 167289,2 | Fix build with 5.8 -no-opengl | dev | qt/qtcharts | Status: MERGED | +2 | 0 |
| 167346,4 | Re-enable QML plugin for QtQuick Software backend | dev | qt/qtcharts | Status: MERGED | +2 | 0 |