Re-enable QML plugin for QtQuick Software backend

There needed to be a bit of re-plumbing but now it is again possible to
use the software renderer with QtCharts in QtQuick 2.  The
declarativerendernode now can be other backends than OpenGL if needed,
while also not spreading around uncessary references to OpenGL classes.

Task-number: QTBUG-55193
Change-Id: I68a44c66c3bfc02f7cf808b21dc83979ed151b59
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>